changes on the main page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="header"></div>
         <div class="sections">
             <div class="left-section">
-                <img src="./media/img/main-img.jpg" alt="Ayush Rameja">
+                <img src="./media/img/main-img.jpg">
             </div>
             <div class="right-section">
                 <div class="container">
