nav-links changes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="cross">
                 <i class="fas fa-times" id="cross"></i>
             </div>
-            <a class="nav-links-a" href="#pro">Projects</a>
-            <a class="nav-links-a" href="#skill">Skills</a>
-            <a class="nav-links-a" href="#foot">Social</a>
+            <a class="nav-links-a" href="#pro" onclick="remove();">Projects</a>
+            <a class="nav-links-a" href="#skill" onclick="remove();">Skills</a>
+            <a class="nav-links-a" href="#foot" onclick="remove();">Social</a>
         </div>
 
         <div class="burger">
