added links and some small changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="card-section">
             <div class="line">
-                <a href="#">
+                <a href="https://ayushrwork.github.io/Foodies/">
                     <div class="card">
                         <div class="img-section">
                             <i class="fas fa-utensils"></i>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="https://ayushrwork.github.io/Quotzz/">
                     <div class="card">
                         <div class="img-section">
                             <i class="fas fa-quote-right"></i>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="https://ayushrwork.github.io/Dark-light-mode/">
                     <div class="card">
                         <div class="img-section">
                             <i class="fas fa-toggle-on"></i>
@@ -89,7 +89,7 @@
                 </a>
             </div>
             <div class="line">
-                <a href="#">
+                <a href="https://ayushrwork.github.io/BeatMaker/">
                     <div class="card">
                         <div class="img-section">
                             <i class="fas fa-guitar"></i>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="https://ayushrwork.github.io/New-Year-Eve/">
                     <div class="card">
                         <div class="img-section">
                             <i class="fas fa-glass-cheers"></i>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="">
+                <a href="#" onclick="messagePro();">
                     <div class="card" id="none">
                         <div class="img-section">
                             <i class="far fa-times-circle"></i>
