--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" onclick="messagePro();">
+                <a href="#pro" onclick="messagePro();">
                     <div class="card" id="none">
                         <div class="img-section">
                             <i class="far fa-times-circle"></i>
