added the social links

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
             <h2>Made With Love</h2>
         </div>
         <div class="social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-github-square"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/ayush_rameja/?hl=en"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/Ayushrwork"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/ayush-rameja-8042541b6/"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
 
